# NeuralHydrologyAzure

./: .gitignore  1_basin.yml  1_basin_mps.yml  NOTES.md  README.md  basins.txt  caravan_pyproject.toml  config.yml  neuralhydrology.yml  pyproject.toml  run.py  train.py  visualize-tutorial-output.py  visualize.ipynb  visualize.py  visualize_2.py  viz_losses.py
.github/workflows/: azure-benchmark-download.yaml  azure-oidc.yaml  azure-vpc.yaml  caravan-cpu-customdata-oicd.yaml  caravan-gpu-customdata-oicd.yaml  caravan-gpu-customdata.yaml  caravan-new_py_files-gpu-customdata.yaml  cpu-customdata-oicd.yaml  cpu-customdata.yaml  cpu-example.yaml  default.yaml  dynamic.yaml  fine-tuning-gpu.yaml  gpu-customdata.yaml  gpu-example.yaml  gpu.yaml  hyperparameter-search.yaml  larger.yaml  tutorial-workflow.yaml
CHIRPS_2.0/: downloading_chirps.ipynb  enseble.ipynb  hydrographs.ipynb  keeping_caravan_gauge_chirps_and_mswep.ipynb  keeping_gauge_and_chirps.ipynb  keeping_gauge_chirps_and_mswep copy.ipynb  paso_de_las_piedras_precip_1989_2019.csv  substituting_precip.ipynb  training_CHIRPS.ipynb  training_CHIRPS.yml
CHIRPS_2.0/precip_timeseries/: CAMELS_UY_10_precip.csv  CAMELS_UY_11_precip.csv  CAMELS_UY_12_precip.csv  CAMELS_UY_13_precip.csv  CAMELS_UY_14_precip.csv  CAMELS_UY_15_precip.csv  CAMELS_UY_16_precip.csv  CAMELS_UY_1_precip.csv  CAMELS_UY_3_precip.csv  CAMELS_UY_4_precip.csv  CAMELS_UY_5_precip.csv  CAMELS_UY_6_precip.csv  CAMELS_UY_7_precip.csv  CAMELS_UY_8_precip.csv  CAMELS_UY_9_precip.csv
CHIRPS_3.0/: downloading_chirps.ipynb  hydrographs.ipynb  parallelization.ipynb  substituting_precip.ipynb  training_CHIRPS.ipynb  training_CHIRPS.yml
CHIRPS_3.0/precip_timeseries/: CAMELS_UY_10_precip.csv  (+10 more)
CPC/: downloading_cpc.ipynb  paso_de_las_piedras_precip_1989_2019.csv
MSWEP/: basins.txt  creating_precip_timeseries.ipynb  hydrographs.ipynb  keeping_caravan_and_mswep.ipynb  keeping_gauge_and_mswep.ipynb  keeping_gauge_and_new_correction_mswep.ipynb  new_precip_product.ipynb  training_MSWEP.ipynb  training_MSWEP.yml
agregating_caravan_uy/: agragating_caravan.ipynb  days_aggregation.ipynb  days_aggregation.yml  hydrographs.ipynb
azure/: README.md  cloud-init.yaml
comparing_precip_products/: comparing_precip_influence.ipynb  correcting_precip.ipynb  correcting_uy_caravan_precip.ipynb  correcting_uy_mswep_precip.ipynb  hydrographs.ipynb  metrics.ipynb  multiple_corrections_hydrographs.ipynb  precip.ipynb  precip_differences.ipynb  uy_basins.txt  uy_basins.yml
ensemble_streamflow_prediction/: customLSTM.ipynb  ensemble_streamflow_prediction.ipynb  esp_per_month.ipynb  esp_per_month_ensembles.ipynb  initial_conditions.ipynb  initial_conditions.py  soting_and_retrieving_model_state.ipynb  trial.ipynb
extending_caravan/: Caravan_MultiMet_Extending_Caravan_with_Multiple_Weather_Nowcasts_and_Forecasts.ipynb  basins_excluded.ipynb  basins_excluded.txt  basins_excluded.yml  basins_without_snow_and_uy.txt  creating_extended_datasets.ipynb  filtering_basins.ipynb  finetune.yml  mswep_creating_precip_timeseries.ipynb  temp_chirps_precipitation  temp_chirps_precipitation_mswep_precipitation  temp_era5land_total_precipitation  temp_era5land_total_precipitation_chirps_precipitation  temp_era5land_total_precipitation_chirps_precipitation_mswep_precipitation  temp_era5land_total_precipitation_mswep_precipitation  temp_mswep_precipitation  temp_total_precipitation_sum_chirps_precipitation  temp_total_precipitation_sum_chirps_precipitation_mswep_precipitation  temp_total_precipitation_sum_mswep_precipitation
final_runs/: basins_without_snow.txt  figures.ipynb  hydrographs.ipynb  keeping_all_precip_products.ipynb  runs.ipynb  runs_new_water_year.ipynb  runs_new_water_year_and_seq_lengths.ipynb  taking_the_ensemble.ipynb  training.ipynb  training.yml  training_new_wy.yml
fine-tuning/: 531_basin_list_and_UY.txt  caravan_and_UY_basins.txt  entire_camels.yml  fine-tuning-basins.txt  finetune.yml  finetune_basin.txt  finetuning.py  pyproject.toml
hyparameter-search/: config.yml  entire_camels.yml  hyperparameter-search.py
hyperparameter_tuning/: camels_uy_6.txt  hyperparameter_tuning.ipynb  plots.ipynb  precip.ipynb  uy_gauge.ipynb  uy_gauge.yml  uy_gauge_seq_14.yml  uy_gauge_seq_7.yml
precipitation_dir/: basins.txt  entire_camels.yml  new_precip_product.ipynb  replicating.ipynb
preparing_data/: all_uruguay_basins.txt  dealing_with_missing_precip.ipynb  filling_missing_precip.ipynb  gauges_in_basins.csv  hydropgraph.ipynb  prepare_catchment_attributes_and_timeseries_for_neuralhydrology_training.py  producing_gauge_precipitation.ipynb  streamflow_data_selection_highqual_with_short_estimated.py  updating_precipitation_timeseries.ipynb
thesis/: COORDENADAS_filtradas.xlsx  data_section_plots.ipynb
uy_precip_caravan_vs_gauge/: uy_gauge.ipynb  uy_gauge.txt  uy_gauge.yml
(+1013 files in other folders)
