[project]
authors = [{name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com"}]
dependencies = ["neuralhydrology>=1.12.0,<2"]
name = "NeuralHydrologyAzure"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.target.linux-64.dependencies]

[tool.pixi.pypi-dependencies]
#neuralhydrologyazure = { path = ".", editable = true }

[tool.pixi.tasks]
# just make sure CLI command runs
#get-camels-data = 'wget --progress=dot -nc https://zenodo.org/records/15529996/files/basin_timeseries_v1p2_metForcing_obsFlow.zip'
# Zenodo can be super slow (<1MB/s), so made a copy of this for testing
get-camels-data = 'wget --progress=dot:giga -nc https://zenodo.org/records/15529996/files/basin_timeseries_v1p2_metForcing_obsFlow.zip'
unzip-camels-data = 'unzip -q -n basin_timeseries_v1p2_metForcing_obsFlow.zip -d ./data/'
rename-camels-data = 'mv ./data/basin_dataset_public_v1p2 ./data/CAMELS_US/'
#get-config = "wget -nc https://raw.githubusercontent.com/neuralhydrology/neuralhydrology/refs/heads/master/examples/01-Introduction/1_basin.yml"
train-cpu = "nh-run train --config-file 1_basin.yml --gpu -1"
train-gpu = "nh-run train --config-file 1_basin.yml" # --gpu mps on macOS with M1/M2? otherwise
eval = "nh-run evaluate" #--run-dir runs/test_run_2010_222905
visualize = "python visualize.py" # runs/test_run_2010_222905


# minimal requirements
# https://github.com/neuralhydrology/neuralhydrology/blob/874c05f8b793f366f97fb9cbc5c5e607eadf4b27/setup.py#L38
[tool.pixi.dependencies]
coiled = ">=1.126.0,<2"
pytorch = ">=2.8.0,<3"
matplotlib-base = ">=3.10.7,<4"
numba = ">=0.62.1,<0.63"
numpy = ">=2.3.3,<3"
pandas = ">=2.3.3,<3"
scipy = ">=1.16.2,<2"
xarray = ">=2025.10.1,<2026"
tqdm = ">=4.67.1,<5"
tensorboard = ">=2.20.0,<3"
"ruamel.yaml" = ">=0.18.15,<0.19"
cloudpathlib = ">=0.23.0,<0.24"
ruff = ">=0.14.1,<0.15"


