[project]
authors = [{name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com"}]
name = "NeuralHydrologyAzure"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["neuralhydrology>=1.12.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
#neuralhydrologyazure = { path = ".", editable = true }

[tool.pixi.tasks]
# just make sure CLI command runs
#get-camels-data = 'wget --progress=dot -nc https://zenodo.org/records/15529996/files/basin_timeseries_v1p2_metForcing_obsFlow.zip'
get-camels-data = { cmd = "wget --progress=dot:giga -nc $URL -O basin_timeseries_v1p2_metForcing_obsFlow.zip", env = { URL = "https://zenodo.org/records/15529996/files/basin_timeseries_v1p2_metForcing_obsFlow.zip" } }
unzip-camels-data = 'unzip -q -n basin_timeseries_v1p2_metForcing_obsFlow.zip -d ./data/'
# rename-camels-data = 'mv ./data/basin_dataset_public_v1p2 ./data/CAMELS_US/'
#get-config = "wget -nc https://raw.githubusercontent.com/neuralhydrology/neuralhydrology/refs/heads/master/examples/01-Introduction/1_basin.yml"
train-cpu = "nh-run train --config-file config.yml --gpu -1" #1_basin.yml --gpu -1"
eval = "nh-run evaluate" #--run-dir runs/test_run_2010_222905
visualize = "python visualize_2.py" # runs/test_run_2010_222905
get-data = { cmd = 'wget --progress=dot:giga -nc "$INPUT_DATA_URL" -O input-data.zip'}
unzip-data = 'unzip -q -n input-data.zip -d ./data/'
# rename-data = 'mv ./data/basin_dataset_public_v1p2 ./data/CAMELS_US/'
train-cpu2 = "nh-run train --gpu -1" # must specify config file

[tool.pixi.feature.gpu.tasks]
train-gpu = "nh-run train --config-file config.yml" #1_basin.yml"
train-gpu2 = "nh-run train" # must specify config file

# minimal requirements
# https://github.com/neuralhydrology/neuralhydrology/blob/874c05f8b793f366f97fb9cbc5c5e607eadf4b27/setup.py#L38
[tool.pixi.dependencies]
coiled = ">=1.126.0,<2"
#pytorch = ">=2.8.0,<3"
matplotlib-base = ">=3.10.7,<4"
numba = ">=0.62.1,<0.63"
numpy = ">=2.3.3,<3"
pandas = ">=2.3.3,<3"
scipy = ">=1.16.2,<2"
xarray = ">=2025.10.1,<2026"
tqdm = ">=4.67.1,<5"
tensorboard = ">=2.20.0,<3"
"ruamel.yaml" = ">=0.18.15,<0.19"
cloudpathlib = ">=0.23.0,<0.24"
ruff = ">=0.14.1,<0.15"

# [tool.pixi.target.linux-64.dependencies]
# cuda = ">=13.0.2,<14"

[tool.pixi.environments]
gpu = ["gpu"]

# NOTE: github actions default T4 runner has CUDA Version: 12.8
# https://pixi.sh/latest/python/pytorch/#installing-from-conda-forge
[tool.pixi.feature.gpu]
platforms = ["linux-64"]
system-requirements = {cuda = "12"}
dependencies = {pytorch-gpu = ">=2.7.0,<3", cuda-version= ">=12.0,<13"}
